--- a/ass-01/otter.html
+++ b/ass-01/otter.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="otter.css">
-    <title>Otter Essay</title>
+    <title>Assignment 1</title>
 </head>
 <body>
     <div class="container">
