Add list for assignments

--- a/index.html
+++ b/index.html
@@ -11,22 +11,15 @@
     <title>CSS Assignments</title>
 </head>
 <body>
-    <h1>HTML Assignments</h1>
-
-    <section class="ass-01">
-        <h3>Assignment 1</h3>
-        <ol>
-            <li><a href="./ass-01/index.html">Otter Essay</a></li>
-            <li><a href="./ass-01/form.html">Application Form</a></li>
-        </ol>
-    </section>
-
-    <section class="ass-02">
-        <h3>Assignment 2</h3>
-        <ol>
-            <li><a href="./ass-01/index.html">Biography</a></li>
-            <li><a href="./ass-01/form.html">Application Form</a></li>
-        </ol>
-    </section>
+    <h1>CSS Assignments</h1>
+    <ol>
+        <li><a href="./ass-01/otter.html">Otter Essay</a></li>
+        <li></li>
+        <li><a href="./ass-03/novus.html">Novus Watch</a></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 </body>
 </html>
