--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>CSS Assignments</h1>
     <ol>
         <li><a href="./ass-01/otter.html">Otter Essay</a></li>
-        <li></li>
+        <li><a href="./ass-02/huckleberry.html">Huckleberry</a></li>
         <li><a href="./ass-03/novus.html">Novus Watch</a></li>
         <li></li>
         <li></li>
