--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="./ass-02/huckleberry.html">Huckleberry</a></li>
         <li><a href="./ass-03/novus.html">Novus Watch</a></li>
         <li></li>
-        <li></li>
+        <li><a href="./ass-05/wp-pusher.html">WP-Pusher</a></li>
         <li></li>
         <li></li>
     </ol>
