Add footer to page

--- a/ass-05/wp-pusher.html
+++ b/ass-05/wp-pusher.html
@@ -25,6 +25,17 @@
         </div>
     </header>
     <hr>
-    <!-- <div class="hr-line"></div> -->
+    
+    <main>
+        <div class="left-checkout-section">
+
+        </div>
+
+        <div class="right-checkout-section">
+
+        </div>
+    </main>
+
+    <footer>&copy; 2018 WP Pusher IVS  ·  <a href="#">Terms of Service</a></footer>
 </body>
 </html>
