--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <li><a href="./ass-01/otter.html">Otter Essay</a></li>
         <li><a href="./ass-02/huckleberry.html">Huckleberry</a></li>
         <li><a href="./ass-03/novus.html">Novus Watch</a></li>
-        <li></li>
+        <li><a href="./ass-04/web-dev-training.html">Web Development Training</a></li>
         <li><a href="./ass-05/wp-pusher.html">WP-Pusher</a></li>
         <li></li>
         <li></li>
