Add fullname and AltSchool ID as footer

--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <title>CSS Assignments</title>
 </head>
 <body>
-    <h1>CSS Assignments</h1>
-    <ol>
-        <li><a href="./ass-01/otter.html">Otter Essay</a></li>
-        <li><a href="./ass-02/huckleberry.html">Huckleberry</a></li>
-        <li><a href="./ass-03/novus.html">Novus Watch</a></li>
-        <li><a href="./ass-04/web-dev-training.html">Web Development Training</a></li>
-        <li><a href="./ass-05/wp-pusher.html">WP-Pusher</a></li>
-        <li></li>
-        <li></li>
-    </ol>
+    <main>
+        <h1>CSS Assignments</h1>
+        <ol>
+            <li><a href="./ass-01/otter.html">Otter Essay</a></li>
+            <li><a href="./ass-02/huckleberry.html">Huckleberry</a></li>
+            <li><a href="./ass-03/novus.html">Novus Watch</a></li>
+            <li><a href="./ass-04/web-dev-training.html">Web Development Training</a></li>
+            <li><a href="./ass-05/wp-pusher.html">WP-Pusher</a></li>
+            <li><a href="./ass-06/scissors.html">Scissors</a></li>
+            <li></li>
+        </ol>
+    </main>
+    <footer>&copy; 2025 Musa Abdulrofihi (ALT/SOE/024/5582)</footer>
 </body>
 </html>
