Add link-to-link section

--- a/ass-06/scissors.html
+++ b/ass-06/scissors.html
@@ -29,7 +29,7 @@
     </header>
 
     <main>
-        <div class="hero-section">
+        <div id="hero-section">
             <h1 id="hero-header"> Optimize Your Online Experience with Our <br> Advanced <span class="blue-links"><img src="./assets/icons/swoosh.png" alt="swoosh">URL Shortening</span> Solution</h1>
             <p id="hero-text">
                 Personalize your shortened URLs to align with your brand identity. Utilize custom slugs,<br> 
@@ -40,6 +40,15 @@
                 <button class="circular-btns">Sign up</button>
                 <button class="blue-links">Learn more</button>
             </div>
+        </div>
+
+        <div id="transform-link">
+            <img src="./assets/icons/link-to-link.png" alt="seamlessly transform link image">
+            <p>Seamlessly transform your long URLs into concise and shareable links with just few clicks.</p>
+        </div>
+
+        <div id="moar-product-info">
+            
         </div>
     </main>
 </body>
