--- a/ass-06/scissors.html
+++ b/ass-06/scissors.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="./scissors.css">
     <title>Assignment 6</title>
 </head>
+
 <body>
     <header>
         <div class="left-section">
@@ -30,9 +32,10 @@
 
     <main>
         <div id="hero-section">
-            <h1 id="hero-header"> Optimize Your Online Experience with Our <br> Advanced <span class="blue-links"><img src="./assets/icons/swoosh.png" alt="swoosh">URL Shortening</span> Solution</h1>
+            <h1 id="hero-header"> Optimize Your Online Experience with Our <br> Advanced <span class="blue-links"><img
+                        src="./assets/icons/swoosh.png" alt="swoosh">URL Shortening</span> Solution</h1>
             <p id="hero-text">
-                Personalize your shortened URLs to align with your brand identity. Utilize custom slugs,<br> 
+                Personalize your shortened URLs to align with your brand identity. Utilize custom slugs,<br>
                 branded links, and domain customization options to reinforce your brand presence <br>
                 and enhance user engagement.
             </p>
@@ -48,8 +51,78 @@
         </div>
 
         <div id="moar-product-info">
-            
+            <div class="tagline">One Stop. <br> Four <span class="blue-links">Possibilities.</span></div>
+            <div class="product-metrics">
+                <div class="metric-wrapper">
+                    <div class="metric-nums">3M</div>
+                    <div class="metric-details">Active Users</div>
+                </div>
+
+                <div class="metric-wrapper">
+                    <div class="metric-nums">60M</div>
+                    <div class="metric-details">Links & QR <br> codes created</div>
+                </div>
+
+                <div class="metric-wrapper">
+                    <div class="metric-nums">1B</div>
+                    <div class="metric-details">Clicked & Scanned <br> connections</div>
+                </div>
+
+                <div class="metric-wrapper">
+                    <div class="metric-nums">300K</div>
+                    <div class="metric-details">App Integrations</div>
+                </div>
+            </div>
+        </div>
+
+        <div id="why-scissors">
+            <div id="why-text">
+                <h1>Why Choose <span class="blue-links">Scissors</span></h1>
+                <p>
+                    Scissors is the hub of everything that has to do <br> 
+                    with your link management. We shorten your URLs, <br>
+                    allow you creating custom ones for your personal, <br>
+                    business, event usage. Our swift QR code creation,<br> 
+                    management and usage tracking with advance analytics <br>
+                    for all of these is second to none. 
+                </p>
+            </div>
+
+            <div id="why-points-container">
+                <div class="why-points">
+                    <img src="./assets/icons/url-shortening.svg" alt="url shortening">
+                    <h1>URL Shortening</h1>
+                    <p>Scissor allows you to shorten URLs of your business,<br>
+                        events. Shorten your URL at scale, <br>
+                        URL redirects.</p>
+                </div>
+
+                <div class="why-points">
+                    <img src="./assets/icons/custom-urls.svg" alt="custom urls">
+                    <h1>Custom URLs</h1>
+                    <p>With Scissor, you can create custom URLs,<br>
+                        with the length you want! A solution for socials <br>
+                        and businesses.</p>
+                </div>
+
+                <div class="why-points">
+                    <img src="./assets/icons/qr-codes.svg" alt="qr-codes">
+                    <h1>QR Codes</h1>
+                    <p>Generate QR codes to your business, events. <br>
+                        Bring your audience and customers to your <br>
+                        doorstep with this scan and go solution.</p>
+                </div>
+
+                <div class="why-points">
+                    <img src="./assets/icons/data-analytics.svg" alt="data-analytics">
+                    <h1>Data Analytics</h1>
+                    <p>Receive data on the usage of either your <br>
+                        shortened URL, custom URLs or generated QR <br>
+                        codes. Embedded to monitor progress.</p>
+                </div>
+            </div>
         </div>
     </main>
 </body>
+
 </html>
