Add pricing cards

--- a/ass-06/scissors.html
+++ b/ass-06/scissors.html
@@ -122,6 +122,58 @@
                 </div>
             </div>
         </div>
+
+        <div id="price-perfect">
+            <h1>A <span class="blue-links">price perfect</span> for your needs.</h1>
+            <p>From catering for your personal, business, event, socials needs, you can be <br>
+                rest assured we have you in mind in our pricing.</p>
+        </div>
+
+        <div id="pricing">
+            <div id="basic-plan" class="pricing-cards">
+                <div class="plan">Basic</div>
+                <h1>Free</h1>
+                <p>Free Plan for all users</p>
+                <ul>
+                    <li>Unlimited URL Scanning</li>
+                    <li>Basic Link Analytics</li>
+                    <li>Customizable Short Link</li>
+                    <li>Standard Support</li>
+                    <li>Ad-supported</li>
+                </ul>
+            </div>
+
+            <div id="professional-plan" class="pricing-cards">
+                <div class="plan">Profession</div>
+                <h1>$15/Month</h1>
+                <p>Ideal for business creators</p>
+                <ul>
+                    <li>Enhanced Link Analytics</li>
+                    <li>Custom Branded Domains</li>
+                    <li>Advanced Link customization</li>
+                    <li>Priority Support</li>
+                    <li>Ad-free Experience</li>
+                </ul>
+            </div>
+
+            <div id="team-plan" class="pricing-cards">
+                <div class="plan">Teams</div>
+                <h1>$25/Month</h1>
+                <p>Share with up to 10 users</p>
+                <ul>
+                    <li>Team Collaboration</li>
+                    <li>User Roles and Permissions</li>
+                    <li>Enhanced Security</li>
+                    <li>API Access</li>
+                    <li>Dedicated Account Manager</li>
+                </ul>
+            </div>
+        </div>
+
+        <div id="get-pricing">
+            <button class="circular-btns custom-price">Get Custom Pricing</button>
+            <button class="circular-btns">Select Pricing</button>
+        </div>
     </main>
 </body>
 
