--- a/ass-06/scissors.html
+++ b/ass-06/scissors.html
@@ -174,6 +174,24 @@
             <button class="circular-btns custom-price">Get Custom Pricing</button>
             <button class="circular-btns">Select Pricing</button>
         </div>
+
+        <div class="trim-container">
+            <div class="trim-form">
+                <input type="url" name="url" id="url" placeholder="Paste URL here...">
+                <div class="input-pairs">
+                    <select name="domain" id="domain">
+                        <option value="" selected disabled hidden>Choose Domain</option>
+                    </select>
+                    <input type="text" name="alias" id="alias" placeholder="Type Alias Here">
+                </div>
+                <button class="circular-btns trim-btn">Trim <img src="./assets/icons/magic-wand.svg" alt="wand"></button>
+                <p>By clicking TrimURL, I agree to the <strong>Terms of Service</strong>, <strong>Privacy Policy</strong> and Use of Cookies.</p>
+            </div>
+        </div>
+
+        <div class="faqs">
+            <h1>FAQs</h1>
+        </div>
     </main>
 </body>
 
