--- a/ass-06/scissors.html
+++ b/ass-06/scissors.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./scissors.css">
+    <script src="./script.js" defer></script>
     <title>Assignment 6</title>
 </head>
 
@@ -191,6 +192,60 @@
 
         <div class="faqs">
             <h1>FAQs</h1>
+
+            <div id="dropdown"  class="faqs-list">
+                <div id="dropdown-question"  class="question">How does URL shortening work?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr id="answer-line">
+
+            <div class="faqs-list">
+                <div class="question">Is it necessary to create an account to use the URL shortening service?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
+
+            <div class="faqs-list">
+                <div class="question">Are the shortened links permanent? Will they expire?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
+
+            <div class="faqs-list">
+                <div class="question">Are there any limitations on the number of URLs I can shorten?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
+
+            <div class="faqs-list">
+                <div class="question">Can I customize the shortened URLs to reflect my brand or content?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
+
+            <div class="faqs-list">
+                <div class="question">Can I track the performance of my shortened URLs?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
+            
+            <div class="faqs-list">
+                <div class="question">How secure is the URL shortening service? Are the shortened links protected against spam or malicious activity?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
+
+            <div class="faqs-list">
+                <div class="question">What is a QR code and what can it do?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
+
+            <div class="faqs-list">
+                <div class="question">Is there an API available for integrating the URL shortening service into my own applications or websites?</div>
+                <div class="plus">+</div>
+            </div>
+            <hr>
         </div>
     </main>
 </body>
