--- a/ass-06/scissors.html
+++ b/ass-06/scissors.html
@@ -247,7 +247,103 @@
             </div>
             <hr>
         </div>
+
+        <div id="rev"  class="trim-container">
+            <h1>Revolutionizing Link Optimization</h1>
+            <button class="circular-btns">Get Started</button>
+        </div>
     </main>
+
+    <footer>
+        <div class="footer-links">
+            <div id="logos" class="grid">
+                <img src="./assets/icons/logo-black.png" alt="scissors-logo-black">
+
+                <div class="social-media-links">
+                    <img src="./assets/icons/twitter.png" alt="twitter logo">
+                    <img src="./assets/icons/instagram.png" alt="instagram logo">
+                    <img src="./assets/icons/linkedin.png" alt="linkedin logo">
+                    <img src="./assets/icons/facebook.png" alt="facebook icon">
+                </div>
+            </div>
+
+            <div class="grid">
+                <div class="grid-title">Why Scissor?</div>
+                <ul>
+                    <li>Scissor 101</li>
+                    <li>Integrations & API</li>
+                    <li>Pricing</li>
+                </ul>
+            </div>
+
+            <div class="grid">
+                <div class="grid-title">Solutions</div>
+                <ul>
+                    <li>Social Media</li>
+                    <li>Digital Marketing</li>
+                    <li>Customer Service</li>
+                    <li>For Developers</li>
+                </ul>
+            </div>
+
+            <div class="grid">
+                <div class="grid-title">Products</div>
+                <ul>
+                    <li>Link Management</li>
+                    <li>QR Codes</li>
+                    <li>Link-in-bio</li>
+                </ul>
+            </div>
+
+            <div class="grid">
+                <div class="grid-title">Company</div>
+                <ul>
+                    <li>About Scissor</li>
+                    <li>Careers</li>
+                    <li>Partners</li>
+                    <li>Press</li>
+                    <li>Contact</li>
+                    <li>Reviews</li>
+                </ul>
+            </div>
+
+            <div id="resources"  class="grid second-row">
+                <div class="grid-title">Resources</div>
+                <ul>
+                    <li>Blog</li>
+                    <li>Resource Library</li>
+                    <li>Developers</li>
+                    <li>App Connectors</li>
+                    <li>Support</li>
+                    <li>Trust Center</li>
+                    <li>Browser Extension</li>
+                    <li>Mobile App</li>
+                </ul>
+            </div>
+
+            <div class="grid second-row">
+                <div id="features"  class="grid-title">Features</div>
+                <ul>
+                    <li>Branded Links</li>
+                    <li>Mobile Links</li>
+                    <li>Campaign</li>
+                    <li>Management & Analytics</li>
+                    <li>QR Code Generation</li>
+                </ul>
+            </div>
+
+            <div id="legal"  class="grid">
+                <div class="grid-title">Legal</div>
+                <ul>
+                    <li>Privacy Policy</li>
+                    <li>Cookie Policy</li>
+                    <li>Terms of Service</li>
+                    <li>Acceptable Use Policy</li>
+                    <li>Code of Conduct</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
